--- a/data/readme
+++ b/data/readme
@@ -1,2 +1,6 @@
-the datasets contains all the data:
+# the datasets contains all the data:
 gene_1_name, gene_2_name, fitness 
+
+# download from here:
+https://drive.google.com/file/d/1-7v0aky-Yn0U1DhqaoIdrLE8HWkiFDl9/view?usp=share_link 
+
